services/demo-v72/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v72
  labels:
    name: demo-v72
    app: demo-v72-api
